tests/error_messages/error_messages.exp
Error: errors.js:1
  1: if (typeof define === 'function' && define.amd) { }
                ^^^^^^ define. Could not resolve name


Found 1 error
